--- a/build.gradle
+++ b/build.gradle
@@ -41,4 +41,5 @@ dependencies {
 	runtime('org.springframework.boot:spring-boot-devtools')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	compile('org.ozwillo:ozwillo-java-spring-integration:1.24')
+	runtime('org.codehaus.groovy:groovy:2.4.7')
 }
