[Fix] Add missing configuration parameter

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,6 +15,7 @@ application:
   syncDelay: 10000
   
 publik:
+  baseUrl: https://demarches-sve.test-demarches.sictiam.fr
   formType: demande-de-rendez-vous-avec-un-elu
   secret: secret
   algo: sha256
