--- a/build.gradle
+++ b/build.gradle
@@ -41,3 +41,9 @@ dependencies {
 	compile('org.ozwillo:ozwillo-java-spring-integration:1.24')
 	runtime('org.codehaus.groovy:groovy:2.4.7')
 }
+
+bootJar {
+    launchScript {
+        included = true
+    }
+}
