--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,7 +12,6 @@ application:
   syncDelay: 10000
   
 publik:
-  baseUrl: https://demarches-sve.test-demarches.sictiam.fr
   instance: 
     - baseUrl: https://demarches-sve.test-demarches.sictiam.fr
       organization: sictiam
@@ -26,11 +25,9 @@ publik:
     project: citizenreq_0
     modelEM: citizenreq:elecmeeting_0
     modelSVE: citizenreq:sve_0
+    modelORG: org:Organization_0
     model: citizenreq:elecmeeting_0
     modelUser: citizenreq:user_0
-    # TODO : hardcoded for now, make it dynamic later
-    organization: http://data.ozwillo.com/dc/type/orgfr:Organisation_0/FR/25060187900027
-    organizationIri: FR/25060187900027
 
 # TODO : Copied pasted from portal configuration, check if we really need all of them
 kernel:
