Use published version of ozwillo-java-spring lib

--- a/build.gradle
+++ b/build.gradle
@@ -37,13 +37,11 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile('org.springframework.boot:spring-boot-starter-webflux')
 	compile('org.springframework.boot:spring-boot-configuration-processor')
-	compile('org.ozwillo:ozwillo-java-spring-integration:1.24')
+	compile('com.ozwillo:ozwillo-java-spring-integration:1.25.3')
 
 	runtime('org.springframework.boot:spring-boot-devtools')
-	runtime('org.codehaus.groovy:groovy:2.4.7')
 
 	testCompile('org.springframework.boot:spring-boot-starter-test')
-	compile('org.ozwillo:ozwillo-java-spring-integration:1.24')
 	runtime('org.codehaus.groovy:groovy:2.4.7')
 }
 
