--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
 	ext {
-		springBootVersion = '2.0.0.M1'
+		springBootVersion = '2.0.0.RC1'
 	}
 	repositories {
 		mavenCentral()
@@ -14,7 +14,6 @@ buildscript {
 }
 
 apply plugin: 'java'
-apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
@@ -33,11 +32,10 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-actuator')
 	compile('org.springframework.boot:spring-boot-starter-mail')
 	compile('org.springframework.boot:spring-boot-starter-security')
-	compile('org.springframework.session:spring-session')
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile('org.springframework.boot:spring-boot-starter-webflux')
 	compile('org.springframework.boot:spring-boot-configuration-processor')
-	compile('com.ozwillo:ozwillo-java-spring-integration:1.25.3')
+	compile('com.ozwillo:ozwillo-java-spring-integration:1.25.6')
 
 	runtime('org.springframework.boot:spring-boot-devtools')
 
@@ -45,8 +43,10 @@ dependencies {
 	runtime('org.codehaus.groovy:groovy:2.4.7')
 }
 
-bootJar {
-    launchScript {
-        included = true
-    }
+bootRun {
+    environment SPRING_PROFILES_ACTIVE: environment.SPRING_PROFILES_ACTIVE ?: "dev"
+}
+
+task wrapper(type: Wrapper) {
+	gradleVersion = '4.2.1'
 }
