--- a/build.gradle
+++ b/build.gradle
@@ -1,24 +1,42 @@
 buildscript {
 	ext {
 		springBootVersion = '2.0.0.RC1'
+        kotlinVersion = '1.2.10'
 	}
 	repositories {
 		mavenCentral()
 		maven { url "https://repo.spring.io/snapshot" }
 		maven { url "https://repo.spring.io/milestone" }
-		mavenLocal()
 	}
 	dependencies {
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlinVersion}")
+        classpath("org.jetbrains.kotlin:kotlin-allopen:${kotlinVersion}")
+        classpath("org.jetbrains.kotlin:kotlin-noarg:${kotlinVersion}")
 	}
 }
 
 apply plugin: 'java'
+apply plugin: 'kotlin'
+apply plugin: 'kotlin-spring'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
+apply plugin: 'org.jetbrains.kotlin.plugin.noarg'
 
+noArg {
+    annotation("org.springframework.boot.context.properties.ConfigurationPro‌​perties")
+}
+
+group = 'com.ozwillo'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
+
+compileKotlin {
+    kotlinOptions.jvmTarget = "1.8"
+}
+compileTestKotlin {
+    kotlinOptions.jvmTarget = "1.8"
+}
 
 repositories {
 	mavenCentral()
@@ -36,8 +54,11 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-webflux')
 	compile('org.springframework.boot:spring-boot-configuration-processor')
 	compile('com.ozwillo:ozwillo-java-spring-integration:1.25.6')
+    compile("org.jetbrains.kotlin:kotlin-stdlib-jre8")
+    compile("org.jetbrains.kotlin:kotlin-reflect")
 
-	runtime('org.springframework.boot:spring-boot-devtools')
+    runtime('com.fasterxml.jackson.module:jackson-module-kotlin')
+    runtime('org.springframework.boot:spring-boot-devtools')
 
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	runtime('org.codehaus.groovy:groovy:2.4.7')
