--- a/build.gradle
+++ b/build.gradle
@@ -1,27 +1,31 @@
 buildscript {
-	ext {
-		springBootVersion = '2.0.0.RC1'
-        kotlinVersion = '1.2.10'
-	}
-	repositories {
-		mavenCentral()
-		maven { url "https://repo.spring.io/snapshot" }
-		maven { url "https://repo.spring.io/milestone" }
-	}
-	dependencies {
-		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+    ext {
+        springBootVersion = '2.0.0.RC2'
+        kotlinVersion = '1.2.21'
+    }
+    repositories {
+        mavenCentral()
+        maven { url "https://repo.spring.io/milestone" }
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
         classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlinVersion}")
         classpath("org.jetbrains.kotlin:kotlin-allopen:${kotlinVersion}")
         classpath("org.jetbrains.kotlin:kotlin-noarg:${kotlinVersion}")
-	}
+        classpath('org.junit.platform:junit-platform-gradle-plugin:1.1.0')
+    }
 }
 
-apply plugin: 'java'
+ext {
+    junitJupiterVersion = '5.1.0'
+}
+
 apply plugin: 'kotlin'
 apply plugin: 'kotlin-spring'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 apply plugin: 'org.jetbrains.kotlin.plugin.noarg'
+apply plugin: 'org.junit.platform.gradle.plugin'
 
 noArg {
     annotation("org.springframework.boot.context.properties.ConfigurationPro‌​perties")
@@ -32,36 +36,47 @@ version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
 
 compileKotlin {
-    kotlinOptions.jvmTarget = "1.8"
+    kotlinOptions {
+        jvmTarget = "1.8"
+        freeCompilerArgs = ["-Xjsr305=strict"]
+    }
 }
 compileTestKotlin {
-    kotlinOptions.jvmTarget = "1.8"
+    kotlinOptions {
+        jvmTarget = "1.8"
+        freeCompilerArgs = ["-Xjsr305=strict"]
+    }
 }
 
 repositories {
-	mavenCentral()
-	maven { url "https://repo.spring.io/snapshot" }
-	maven { url "https://repo.spring.io/milestone" }
-	mavenLocal()
+    mavenCentral()
+    maven { url "https://repo.spring.io/milestone" }
+    mavenLocal()
 }
 
-
 dependencies {
-	compile('org.springframework.boot:spring-boot-starter-actuator')
-	compile('org.springframework.boot:spring-boot-starter-mail')
-	compile('org.springframework.boot:spring-boot-starter-security')
-	compile('org.springframework.boot:spring-boot-starter-web')
-	compile('org.springframework.boot:spring-boot-starter-webflux')
-	compile('org.springframework.boot:spring-boot-configuration-processor')
-	compile('com.ozwillo:ozwillo-java-spring-integration:1.25.6')
+    compile('org.springframework.boot:spring-boot-starter-actuator')
+    compile('org.springframework.boot:spring-boot-starter-security')
+    compile('org.springframework.boot:spring-boot-starter-reactor-netty')
+    compile('org.springframework.boot:spring-boot-starter-webflux')
+    compile('org.springframework.boot:spring-boot-configuration-processor')
+    compile('org.springframework.boot:spring-boot-starter-data-mongodb-reactive')
+    compile('com.ozwillo:ozwillo-java-spring-integration:2.0.0.SNAPSHOT')
     compile("org.jetbrains.kotlin:kotlin-stdlib-jre8")
     compile("org.jetbrains.kotlin:kotlin-reflect")
+    compile('com.fasterxml.jackson.module:jackson-module-kotlin')
 
-    runtime('com.fasterxml.jackson.module:jackson-module-kotlin')
     runtime('org.springframework.boot:spring-boot-devtools')
+    runtime('org.codehaus.groovy:groovy:2.4.7')
 
-	testCompile('org.springframework.boot:spring-boot-starter-test')
-	runtime('org.codehaus.groovy:groovy:2.4.7')
+    testCompile("org.springframework.boot:spring-boot-starter-test") {
+        exclude module: "junit"
+    }
+    testCompile("org.junit.jupiter:junit-jupiter-api:${junitJupiterVersion}")
+    testCompile("org.junit.jupiter:junit-jupiter-params:${junitJupiterVersion}")
+    testCompile("io.projectreactor:reactor-test")
+
+    testRuntime("org.junit.jupiter:junit-jupiter-engine:${junitJupiterVersion}")
 }
 
 bootRun {
@@ -69,5 +84,5 @@ bootRun {
 }
 
 task wrapper(type: Wrapper) {
-	gradleVersion = '4.2.1'
+    gradleVersion = '4.2.1'
 }
