Add some tests around Consultation endpoint

--- a/build.gradle
+++ b/build.gradle
@@ -68,6 +68,7 @@ dependencies {
     testCompile("org.springframework.boot:spring-boot-starter-test") {
         exclude module: "junit"
     }
+    testCompile('com.github.tomakehurst:wiremock-standalone:2.17.0')
     testImplementation('org.junit.jupiter:junit-jupiter-api')
     testRuntimeOnly('org.junit.jupiter:junit-jupiter-engine')
     testCompile("io.projectreactor:reactor-test")
