--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,49 @@
+configurations {
+    jaxb
+}
+
+task genJaxb {
+    ext.sourcesDir = "${buildDir}/generated-sources/jaxb"
+    ext.classesDir = "${buildDir}/classes/jaxb"
+    ext.schema = "https://www.marches-securises.fr/webserv/?module=dce|wsdl_crea_dce"
+
+    outputs.dir classesDir
+
+    doLast() {
+        project.ant {
+            taskdef name: "xjc", classname: "com.sun.tools.xjc.XJCTask",
+                    classpath: configurations.jaxb.asPath
+            mkdir(dir: sourcesDir)
+            mkdir(dir: classesDir)
+
+            xjc(destdir: sourcesDir, schema: schema,
+                    package: "org.ozwillo.dcimporter.wsdl") {
+                arg(value:"-verbose")
+                arg(value: "-wsdl")
+                produces(dir: sourcesDir, includes: "**/*.java")
+            }
+
+            javac(destdir: classesDir, source: 1.8, target: 1.8, debug: true,
+                    debugLevel: "lines,vars,source",
+                    classpath: configurations.jaxb.asPath) {
+                src(path: sourcesDir)
+                include(name: "**/*.java")
+                include(name: "*.java")
+            }
+
+            copy(todir: classesDir) {
+                fileset(dir: sourcesDir, erroronmissingdir: false) {
+                    exclude(name: "**/*.java")
+                }
+            }
+        }
+    }
+}
+
 buildscript {
     ext {
         springBootVersion = '2.0.1.RELEASE'
-        kotlinVersion = '1.2.41'
+        kotlinVersion = '1.2.50'
     }
     repositories {
         mavenCentral()
@@ -16,6 +58,9 @@ buildscript {
     }
 }
 
+apply plugin: 'java'
+apply plugin: 'eclipse'
+apply plugin: 'idea'
 apply plugin: 'kotlin'
 apply plugin: 'kotlin-spring'
 apply plugin: 'org.springframework.boot'
@@ -26,6 +71,9 @@ apply plugin: 'org.junit.platform.gradle.plugin'
 noArg {
     annotation("org.springframework.boot.context.properties.ConfigurationPro‌​perties")
 }
+
+
+
 
 group = 'com.ozwillo'
 version = '0.0.1-SNAPSHOT'
@@ -51,6 +99,7 @@ repositories {
 }
 
 dependencies {
+    compile('org.springframework.boot:spring-boot-starter-web-services')
     compile('org.springframework.boot:spring-boot-starter-actuator')
     compile('org.springframework.boot:spring-boot-starter-data-mongodb-reactive')
     compile('org.springframework.boot:spring-boot-starter-webflux')
@@ -61,6 +110,10 @@ dependencies {
     compile('org.apache.commons:commons-lang3:3.7')
     compile('commons-codec:commons-codec:1.11')
     compile('com.google.guava:guava:23.6-jre')
+    compile('org.codehaus.groovy:groovy')
+    compile('org.codehaus.groovy:groovy-templates')
+    compile('io.javaslang:javaslang:2.0.4')
+
 
     runtime('org.springframework.boot:spring-boot-devtools')
     runtime('org.codehaus.groovy:groovy:2.4.7')
@@ -72,6 +125,12 @@ dependencies {
     testImplementation('org.junit.jupiter:junit-jupiter-api')
     testRuntimeOnly('org.junit.jupiter:junit-jupiter-engine')
     testCompile("io.projectreactor:reactor-test")
+
+    compile("org.springframework.boot:spring-boot-starter")
+    compile("org.springframework.ws:spring-ws-core")
+    compile(files(genJaxb.classesDir).builtBy(genJaxb))
+    jaxb "com.sun.xml.bind:jaxb-xjc:2.1.7"
+
 }
 
 bootRun {
@@ -88,7 +147,18 @@ task wrapper(type: Wrapper) {
 }
 
 bootJar {
+
     launchScript {
         properties 'initInfoProvides': 'ozwillo-dc-importer'
     }
+
+    baseName = 'gs-consuming-web-service'
+    version =  '0.1.0'
+
+    from genJaxb.classesDir
+
+}
+
+task afterEclipseImport {
+    dependsOn genJaxb
 }
