--- a/build.gradle
+++ b/build.gradle
@@ -62,6 +62,7 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-data-mongodb-reactive')
     compile('org.springframework.boot:spring-boot-starter-webflux')
     compile('org.springframework.boot:spring-boot-configuration-processor')
+    compile('org.springframework.boot:spring-boot-starter-amqp')
     compile("org.jetbrains.kotlin:kotlin-stdlib-jre8")
     compile("org.jetbrains.kotlin:kotlin-reflect")
     compile('com.fasterxml.jackson.module:jackson-module-kotlin')
@@ -71,6 +72,7 @@ dependencies {
     compile('org.codehaus.groovy:groovy')
     compile('org.codehaus.groovy:groovy-templates')
     compile('io.javaslang:javaslang:2.0.4')
+
 
 
     runtime('org.springframework.boot:spring-boot-devtools')
