--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -67,3 +67,8 @@ datacore:
     refreshToken: refreshToken
     nonce: changeit      #Set it when getting the refreshToken
   baseUri: http://data.ozwillo.com/dc/type
+
+spring:
+  jackson:
+    serialization:
+      write_dates_as_timestamps: false
