--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -72,3 +72,9 @@ spring:
   jackson:
     serialization:
       write_dates_as_timestamps: false
+
+spring:
+  rabbitmq:
+    addresses: localhost
+    username: guest
+    password: guest
