--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,6 +27,21 @@ publik:
     modelORG: org:Organization_0
     modelUser: citizenreq:user_0
 
+marchesecurise:
+  login: login
+  password: password
+  pa: pa
+  config:
+    url:
+      createConsultation: https://www.marches-securises.fr/webserv/?module=dce|serveur_crea_dce
+      updateConsultation: https://www.marches-securises.fr/webserv/?module=dce|serveur_modif_dce
+      deleteConsultation: https://www.marches-securises.fr/webserv/?module=dce|serveur_suppr_dce
+      lot: https://www.marches-securises.fr/webserv/?module=dce|serveur_lot_dce
+    amqp:
+      exchangerName: dcimporter
+      queueName: marchesecurise
+      bindingKey: consultation.#
+
 maarch:
   instance:
     - baseUrl: http://localhost
