--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,10 @@ spring:
   data:
     mongodb:
       database: dcimporter
+  rabbitmq:
+      addresses: localhost
+      username: guest
+      password: guest
 
 server:
   compression.enabled: true
@@ -37,8 +41,11 @@ marchesecurise:
       updateConsultation: https://www.marches-securises.fr/webserv/?module=dce|serveur_modif_dce
       deleteConsultation: https://www.marches-securises.fr/webserv/?module=dce|serveur_suppr_dce
       lot: https://www.marches-securises.fr/webserv/?module=dce|serveur_lot_dce
-    amqp:
-      exchangerName: dcimporter
+
+amqp:
+  config:
+    exchangerName: dcimporter
+    marchesecurise:
       queueName: marchesecurise
       bindingKey: consultation.#
 
@@ -82,10 +89,3 @@ datacore:
     refreshToken: refreshToken
     nonce: changeit      #Set it when getting the refreshToken
   baseUri: http://data.ozwillo.com/dc/type
-
-
-spring:
-  rabbitmq:
-    addresses: localhost
-    username: guest
-    password: guest
