--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,8 @@ buildscript {
     }
 }
 
+apply plugin: 'java'
+apply plugin: 'eclipse'
 apply plugin: 'idea'
 apply plugin: 'kotlin'
 apply plugin: 'kotlin-spring'
@@ -101,7 +103,9 @@ task wrapper(type: Wrapper) {
 }
 
 bootJar {
+
     launchScript {
         properties 'initInfoProvides': 'ozwillo-dc-importer'
     }
+
 }
