[Evo] intégration ms - delete consultation

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -46,7 +46,7 @@ amqp:
       exchangerName: dcimporter
       marchesecurise:
         queueName: marchesecurise
-        bindingKey: consultation.#
+        bindingKey: marchepublic_0.#
 
 maarch:
   instance:
