[Evo]#4528 api publish consultation added + basic handler tests to improve

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -39,6 +39,7 @@ marchesecurise:
     createConsultation: https://www.marches-securises.fr/webserv/?module=dce|serveur_crea_dce
     updateConsultation: https://www.marches-securises.fr/webserv/?module=dce|serveur_modif_dce
     deleteConsultation: https://www.marches-securises.fr/webserv/?module=dce|serveur_suppr_dce
+    publishConsultation: https://www.marches-securises.fr/webserv/?module=dce|serveur_publication_dce
     lot: https://www.marches-securises.fr/webserv/?module=dce|serveur_lot_dce
     piece: https://www.marches-securises.fr/webserv/?module=dce|serveur_fichier_dce
 
