--- a/build.gradle
+++ b/build.gradle
@@ -73,7 +73,7 @@ dependencies {
     }
     testCompile('com.github.tomakehurst:wiremock-standalone:2.17.0')
     testCompile("io.projectreactor:reactor-test")
-    testCompile('com.github.fridujo:rabbitmq-mock:1.0.3')
+    testCompile('org.springframework.amqp:spring-rabbit-test')
     testCompile('de.flapdoodle.embed:de.flapdoodle.embed.mongo')
 
     testImplementation('org.junit.jupiter:junit-jupiter-api')
