--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -28,7 +28,7 @@ publik:
     project: citizenreq_0
     modelEM: citizenreq:elecmeeting_0
     modelSVE: citizenreq:sve_0
-    modelORG: org:Organization_0
+    modelORG: orgfr:Organisation_0
     modelUser: citizenreq:user_0
 
 marchesecurise:
