[Evo]#4482 Customized aknowledgement system for rabbit mq - a base to improve

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,6 +8,9 @@ spring:
     addresses: localhost
     username: guest
     password: guest
+    listener:
+      simple:
+        acknowledge-mode: manual
 
 server:
   compression.enabled: true
