Add a warning if basic auth has not been setup

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,8 +16,8 @@ server:
 security:
   basicAuth:
     connexion:
-      user: sictiam
-      password: password
+      user: user
+      password: changeme
       role: DEV
 
 application:
