[Evo]#4482 Tests fixes ([Fix]#4576 included) + deadletter renamed

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -48,6 +48,7 @@ amqp:
       exchangerName: dcimporter
       marchesecurise:
         queueName: marchesecurise
+        deadLetterQueue: ms.deadletter
         bindingKey: marchepublic_0.#
       maarch:
         queueName: maarch
