Tests improvement + activation of actuator httptrace endpoint

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,6 +16,12 @@ server:
   compression.enabled: true
   address: 127.0.0.1
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: httptrace, health, info
+
 security:
   basicAuth:
     connexion:
