--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -1,5 +1,5 @@
 kernel:
-  accountUri: http://localhost:8089
+  baseUri: http://localhost:8089
 
 datacore:
   url: http://localhost:8089
@@ -12,3 +12,8 @@ marchesecurise:
     publishConsultation: http://localhost:8990/webserv/?module=dce|serveur_publication_dce
     lot: http://localhost:8990/webserv/?module=dce|serveur_lot_dce
     piece: http://localhost:8990/webserv/?module=dce|serveur_fichier_dce
+
+insee:
+  api:
+    sirene:
+      baseUri: http://localhost:8089
