--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -6,12 +6,13 @@ datacore:
 
 marchesecurise:
   url:
-    createConsultation: http://localhost:8990/webserv/?module=dce|serveur_crea_dce
-    updateConsultation: http://localhost:8990/webserv/?module=dce|serveur_modif_dce
-    deleteConsultation: http://localhost:8990/webserv/?module=dce|serveur_suppr_dce
-    publishConsultation: http://localhost:8990/webserv/?module=dce|serveur_publication_dce
-    lot: http://localhost:8990/webserv/?module=dce|serveur_lot_dce
-    piece: http://localhost:8990/webserv/?module=dce|serveur_fichier_dce
+    createConsultation: /webserv/?module=dce%7Cserveur_crea_dce
+    updateConsultation: /webserv/?module=dce%7Cserveur_modif_dce
+    deleteConsultation: /webserv/?module=dce%7Cserveur_suppr_dce
+    publishConsultation: /webserv/?module=dce%7Cserveur_publication_dce
+    lot: /webserv/?module=dce%7Cserveur_lot_dce
+    piece: /webserv/?module=dce%7Cserveur_fichier_dce
+    registre: /webserv/?module=registres%7Cserveur_registres
 
 insee:
   api:
