--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,10 @@ buildscript {
     }
 }
 
+plugins {
+    id "com.moowork.node" version "1.2.0"
+}
+
 apply plugin: 'idea'
 apply plugin: 'kotlin'
 apply plugin: 'kotlin-spring'
@@ -101,3 +105,27 @@ bootJar {
         properties 'initInfoProvides': 'ozwillo-dc-importer'
     }
 }
+
+node {
+    version = '8.11.3'
+    download = false
+}
+
+configure(tasks.processResources) {
+    // we don't want the JS sources in the jar, we only need their transpiled, bundled version in build/
+    exclude "public/src", "public/node_modules/", "public/babel.config.json", "public/.*"
+}
+
+def frontendDir = "./src/main/resources/public"
+
+task yarnInstall(type: YarnTask) {
+    args = ['--cwd', frontendDir, 'install']
+}
+
+task frontBundle(type: YarnTask) {
+    args = ['--cwd', frontendDir, 'run', 'build']
+}
+
+assemble.dependsOn(frontBundle)
+frontBundle.dependsOn(yarnInstall)
+jar.dependsOn(frontBundle)
