--- a/src/main/resources/public/package.json
+++ b/src/main/resources/public/package.json
@@ -13,7 +13,8 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
     "vue": "^2.5.11",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vue-single-select": "^1.0.23"
   },
   "browserslist": [
     "> 1%",
