--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,9 @@ spring:
     listener:
       simple:
         acknowledge-mode: manual
+  mail:
+    host: yourMailHost
+    port: 587
 
 server:
   compression.enabled: true
