[Evo] #5287 processing statistics screen added + statistics calculed from registered events on general rabbitmq listener

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -69,6 +69,9 @@ amqp:
     publik:
       queueName: publik
       bindingKey: citizenreq_0.#
+    processingStat:
+      queueName: stat
+      bindingKey: '#'
 
 kernel:
   baseUri: https://kernel.ozwillo-preprod.eu
