--- a/src/main/resources/public/package.json
+++ b/src/main/resources/public/package.json
@@ -12,10 +12,12 @@
     "dependencies": {
         "axios": "^0.18.0",
         "bootstrap": "^4.1.3",
+        "chart.js": "^2.7.3",
         "date-fns": "^1.29.0",
         "lodash": "^4.17.11",
         "vue": "^2.5.11",
         "vue-bootstrap-typeahead": "^0.2.6",
+        "vue-chartkick": "^0.5.0",
         "vue-router": "^3.0.1",
         "vue-single-select": "^1.0.23"
     },
