--- a/src/main/resources/public/package.json
+++ b/src/main/resources/public/package.json
@@ -14,7 +14,9 @@
         "bootstrap": "^4.1.3",
         "chart.js": "^2.7.3",
         "date-fns": "^1.29.0",
+        "jquery": "^3.3.1",
         "lodash": "^4.17.11",
+        "popper.js": "^1.14.6",
         "vue": "^2.5.11",
         "vue-bootstrap-typeahead": "^0.2.6",
         "vue-chartkick": "^0.5.0",
