--- a/src/main/resources/public/package.json
+++ b/src/main/resources/public/package.json
@@ -18,6 +18,7 @@
         "vue": "^2.5.11",
         "vue-bootstrap-typeahead": "^0.2.6",
         "vue-chartkick": "^0.5.0",
+        "vue-i18n": "^8.5.0",
         "vue-router": "^3.0.1",
         "vue-single-select": "^1.0.23"
     },
