--- a/src/main/resources/public/package.json
+++ b/src/main/resources/public/package.json
@@ -6,8 +6,8 @@
     "license": "MIT",
     "private": true,
     "scripts": {
-        "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
-        "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
+        "dev": "cross-env NODE_ENV=development webpack-dev-server --mode=development --open --hot",
+        "build": "cross-env NODE_ENV=production webpack --mode=production --progress --hide-modules"
     },
     "dependencies": {
         "axios": "^0.18.0",
@@ -16,11 +16,11 @@
         "date-fns": "^1.29.0",
         "jquery": "^3.3.1",
         "lodash": "^4.17.11",
-        "popper.js": "^1.14.6",
-        "vue": "^2.5.11",
+        "popper.js": "^1.14.7",
+        "vue": "^2.6.4",
         "vue-bootstrap-typeahead": "^0.2.6",
         "vue-chartkick": "^0.5.0",
-        "vue-i18n": "^8.5.0",
+        "vue-i18n": "^8.8.0",
         "vue-router": "^3.0.1",
         "vue-single-select": "^1.0.23"
     },
@@ -30,18 +30,23 @@
         "not ie <= 8"
     ],
     "devDependencies": {
-        "babel-core": "^6.26.0",
-        "babel-loader": "^7.1.2",
-        "babel-preset-env": "^1.6.0",
-        "babel-preset-stage-3": "^6.24.1",
+        "@babel/core": "^7.2.2",
+        "@babel/plugin-proposal-class-properties": "^7.0.0",
+        "@babel/plugin-proposal-json-strings": "^7.0.0",
+        "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+        "@babel/plugin-syntax-import-meta": "^7.0.0",
+        "@babel/preset-env": "^7.3.1",
+        "@vue/babel-preset-app": "^3.4.0",
+        "babel-loader": "^8.0.5",
         "cross-env": "^5.0.5",
-        "css-loader": "^0.28.7",
-        "file-loader": "^1.1.4",
+        "css-loader": "^2.1.0",
+        "file-loader": "^3.0.1",
         "node-sass": "^4.5.3",
-        "sass-loader": "^6.0.6",
-        "vue-loader": "^13.0.5",
-        "vue-template-compiler": "^2.4.4",
-        "webpack": "^3.6.0",
-        "webpack-dev-server": "^2.9.1"
+        "sass-loader": "^7.1.0",
+        "vue-loader": "^15.6.2",
+        "vue-template-compiler": "^2.6.4",
+        "webpack": "^4.29.3",
+        "webpack-cli": "^3.2.3",
+        "webpack-dev-server": ">=3.1.11"
     }
 }
