--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -60,9 +60,6 @@ marchesecurise:
     piece: /webserv/?module=dce|serveur_fichier_dce
     registre: /webserv/?module=registres|serveur_registres
 
-iot:
-  baseBindingKey: egm-lora
-
 amqp:
   config:
     exchangerName: dcimporter
@@ -79,9 +76,10 @@ amqp:
     processingStat:
       queueName: stat
       bindingKey: '#'
-    egm:
-      queueName: egm
+    iot:
+      queueName: iot
       bindingKey: egm-lora.#
+      baseBindingKey: egm-lora
 
 kernel:
   baseUri: https://kernel.ozwillo-preprod.eu
