--- a/build.gradle
+++ b/build.gradle
@@ -1,37 +1,20 @@
-buildscript {
-    ext {
-        springBootVersion = '2.0.7.RELEASE'
-        kotlinVersion = '1.3.21'
-    }
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlinVersion}")
-        classpath("org.jetbrains.kotlin:kotlin-allopen:${kotlinVersion}")
-        classpath("org.jetbrains.kotlin:kotlin-noarg:${kotlinVersion}")
-        classpath('org.junit.platform:junit-platform-gradle-plugin:1.1.0')
-    }
+plugins {
+    id 'org.springframework.boot' version '2.1.4.RELEASE'
+    id 'org.jetbrains.kotlin.jvm' version '1.3.21'
+    id 'org.jetbrains.kotlin.plugin.spring' version '1.3.21'
+    id "com.moowork.node" version "1.2.0"
 }
 
-plugins {
-    id "com.moowork.node" version "1.2.0"
+repositories {
+    mavenCentral()
 }
 
 apply plugin: 'idea'
 apply plugin: 'kotlin'
-apply plugin: 'kotlin-spring'
-apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
-apply plugin: 'org.jetbrains.kotlin.plugin.noarg'
-
-noArg {
-    annotation("org.springframework.boot.context.properties.ConfigurationPro‌​perties")
-}
 
 group = 'com.ozwillo'
-version = '0.0.5'
+version = '0.1.0'
 sourceCompatibility = 1.8
 
 compileKotlin {
@@ -58,8 +41,8 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-security')
     compile('org.springframework.boot:spring-boot-configuration-processor')
     compile('org.springframework.boot:spring-boot-starter-amqp')
-    compile 'org.springframework.boot:spring-boot-starter-mail'
-    compile("org.jetbrains.kotlin:kotlin-stdlib-jdk8")  //updated from jre8 (depreciated)
+    compile('org.springframework.boot:spring-boot-starter-mail')
+    compile("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
     compile("org.jetbrains.kotlin:kotlin-reflect")
     compile('com.fasterxml.jackson.module:jackson-module-kotlin')
     compile('org.apache.commons:commons-lang3:3.7')
@@ -67,11 +50,11 @@ dependencies {
     compile('org.codehaus.groovy:groovy')
     compile('org.codehaus.groovy:groovy-templates')
 
-    runtime('org.springframework.boot:spring-boot-devtools')
-    runtime('org.codehaus.groovy:groovy:2.4.7')
+    runtimeOnly('org.springframework.boot:spring-boot-devtools')
 
-    testCompile("org.springframework.boot:spring-boot-starter-test") {
+    testImplementation("org.springframework.boot:spring-boot-starter-test") {
         exclude module: "junit"
+        exclude module: 'mockito-core'
     }
     testCompile('com.github.tomakehurst:wiremock-standalone:2.17.0')
     testCompile("io.projectreactor:reactor-test")
@@ -80,6 +63,8 @@ dependencies {
         exclude group: 'org.apache.commons', module: 'commons-compress'
     }
 
+    testImplementation('io.mockk:mockk:1.9.1')
+    testImplementation('com.ninja-squad:springmockk:1.1.1')
     testImplementation('org.junit.jupiter:junit-jupiter-api')
     testImplementation('org.apache.commons:commons-compress:1.18')
 
@@ -94,11 +79,6 @@ test {
     useJUnitPlatform()
     environment 'spring.profiles.active', 'test'
 }
-
-//task wrapper(type: Wrapper) {
-//    // at least 4.6 for JUnit 5 support
-//    gradleVersion = '4.7'
-//}
 
 bootJar {
     launchScript {
