--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,8 @@ repositories {
 apply plugin: 'idea'
 apply plugin: 'kotlin'
 apply plugin: 'io.spring.dependency-management'
+// run ./gradlew kaptKotlin to generate the metadata for the configuration properties
+apply plugin: 'kotlin-kapt'
 
 group = 'com.ozwillo'
 version = '0.1.0'
@@ -35,6 +37,8 @@ repositories {
 }
 
 dependencies {
+    kapt("org.springframework.boot:spring-boot-configuration-processor")
+    
     compile('org.springframework.boot:spring-boot-starter-actuator')
     compile('org.springframework.boot:spring-boot-starter-data-mongodb-reactive')
     compile('org.springframework.boot:spring-boot-starter-webflux')
