--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -49,23 +49,9 @@ publik:
   algo: sha256
   orig: ozwillo-dcimporter
 
-marchesecurise:
-  url:
-    createConsultation: /webserv/?module=dce|serveur_crea_dce
-    updateConsultation: /webserv/?module=dce|serveur_modif_dce
-    deleteConsultation: /webserv/?module=dce|serveur_suppr_dce
-    publishConsultation: /webserv/?module=dce|serveur_publication_dce
-    lot: /webserv/?module=dce|serveur_lot_dce
-    piece: /webserv/?module=dce|serveur_fichier_dce
-    registre: /webserv/?module=registres|serveur_registres
-
 amqp:
   config:
     exchangerName: dcimporter
-    marchesecurise:
-      queueName: marchesecurise
-      deadLetterQueue: ms.deadletter
-      bindingKey: marchepublic_0.#
     maarch:
       queueName: maarch
       bindingKey: citizenreq_0.#
@@ -100,7 +86,8 @@ datacore:
     modelORG: orgfr:Organisation_0
     modelUser: citizenreq:user_0
     iotProject: iot_0
-    iotModel: iot:device_0
+    iotDevice: iot:device_0
+    iotMeasure: iot:measure_0
 
 insee:
   api:
