--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,11 @@
+import org.jlleitschuh.gradle.ktlint.reporter.ReporterType
+
 plugins {
     id 'org.springframework.boot' version '2.1.7.RELEASE'
     id 'org.jetbrains.kotlin.jvm' version '1.2.71'
     id 'org.jetbrains.kotlin.plugin.spring' version '1.2.71'
     id "com.moowork.node" version "1.2.0"
+    id "org.jlleitschuh.gradle.ktlint" version "8.2.0"
 }
 
 repositories {
@@ -73,6 +76,12 @@ dependencies {
     testImplementation('org.apache.commons:commons-compress:1.18')
 
     testRuntimeOnly('org.junit.jupiter:junit-jupiter-engine')
+}
+
+ktlint {
+    debug = true
+    verbose = true
+    reporters = [ReporterType.CHECKSTYLE, ReporterType.PLAIN]
 }
 
 bootRun {
