feat: some improvements and fixes

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -51,6 +51,7 @@ publik:
 
 amqp:
   config:
+    defaultExchangerName: amq.topic
     exchangerName: dcimporter
     maarch:
       queueName: maarch
