conf: rename sensor data topic to iot

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -41,7 +41,7 @@ application:
     defaultExchangerName: amq.topic
     exchangerName: dcimporter
   iot:
-    bindingKey: egm-lora.#
+    bindingKey: iot.#
 
 publik:
   formTypeEM: demande-de-rendez-vous
